--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "bootstrap": "^5.2.3",
-        "perfect-scrollbar": "^1.5.0",
         "@popperjs/core": "^2.11.7",
+        "bootstrap": "^5.2.3",
         "datatables.net": "^1.10.24",
         "datatables.net-bs5": "^1.13.4",
         "datatables.net-fixedheader": "^3.1.8",
         "datatables.net-responsive": "^2.4.1",
         "datatables.net-responsive-bs5": "^2.4.1",
-        "jquery": "3.5.1"
+        "glob": "^10.4.2",
+        "jquery": "3.5.1",
+        "perfect-scrollbar": "^1.5.0"
     }
 }
