--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "@popperjs/core": "^2.11.7",
         "bootstrap": "^5.2.3",
+        "bootstrap-datepicker": "^1.9.0",
         "datatables.net": "^1.10.24",
         "datatables.net-bs5": "^1.13.4",
         "datatables.net-fixedheader": "^3.1.8",
