--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "glob": "^10.4.2",
         "izitoast": "^1.4.0",
         "jquery": "3.5.1",
-        "perfect-scrollbar": "^1.5.0"
+        "perfect-scrollbar": "^1.5.0",
+        "sweetalert": "^2.1.2",
+        "sweetalert2": "^11.12.0"
     }
 }
